--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,10 @@
 
 %html
   %head
+    %meta{:'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
+    %meta{:name => "lang", :content => "es"}
     %title En Los Nervios
+    %link{:href=>'/stylesheets/app.css', :media => "screen", :rel => 'stylesheet', :type => "text/css"}
   %body
     %h1 En construccion
 
