--- a/views/index.haml
+++ b/views/index.haml
@@ -2,10 +2,41 @@
 
 %html
   %head
-    %meta{:'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
-    %meta{:name => "lang", :content => "es"}
+    %meta{:charset => "utf-8"}
     %title En Los Nervios
+    %link{:href=>'/stylesheets/bootstrap.min.css', :media => "screen", :rel => 'stylesheet', :type => "text/css"}
     %link{:href=>'/stylesheets/app.css', :media => "screen", :rel => 'stylesheet', :type => "text/css"}
   %body
-    %h1 En construccion
+    %div.navbar.navbar-fixed-top
+      %div.navbar-inner
+        %div.container-fluid
+          %a.brand{:href => "#"} En Los Nervios
+          %ul.nav
+            %li
+              %a{:href => "#start"} Inicio
+            %li
+              %a{:href => "#fanzine"} Fanzine
+            %li
+              %a{:href => "#label"} Sello
+            %li
+              %a{:href => "#distro"} Distro
+            %li
+              %a{:href => "#publishing-house"} Editorial
+    %div.row-fluid
+      %section#start
+        %h1 En Los Nervios
+        %div.clearfix
+        %aside.span6
+          %p
+            En Los Nervios comenzó en noviembre de 2009 con la publicación de un fanzine |
+            y un compilado de bandas locales en CD-R.  En el presente consiste, además, de proyectos |
+            como sello, distribuidora de discos y editorial de libros. |
+          %p
+            En Los Nervios comenzó en noviembre de 2009 con la publicación de un fanzine |
+            y un compilado de bandas locales en CD-R.  En el presente consiste, además, de proyectos |
+            como sello, distribuidora de discos y editorial de libros. |
+    %script{:type => "text/javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.js"}
+    %script{:type => "text/javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.3/jquery.backstretch.min.js"}
+    %script{:type => "text/javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
+    %script{:type => "text/javascript", :src => "javascripts/app.js"}
 
