--- a/views/index.haml
+++ b/views/index.haml
@@ -10,7 +10,8 @@
     %div.navbar.navbar-fixed-top
       %div.navbar-inner
         %div.container-fluid
-          %a.brand{:href => "#"} En Los Nervios
+          %a.brand{:href => "#"}
+            %img{:src => "../images/logo.png"}
           %ul.nav
             %li
               %a{:href => "#start"} Inicio
@@ -28,13 +29,11 @@
         %div.clearfix
         %aside.span6
           %p
-            En Los Nervios comenzó en noviembre de 2009 con la publicación de un fanzine |
-            y un compilado de bandas locales en CD-R.  En el presente consiste, además, de proyectos |
-            como sello, distribuidora de discos y editorial de libros. |
+            En Los Nervios comenzó en noviembre de 2009, en Montevideo, Uruguay, con la publicación |
+            de un fanzine y un compilado de bandas locales en CD-R.  En el presente consiste, además, |
+            de proyectos como sello, distribuidora de discos y editorial de libros. |
           %p
-            En Los Nervios comenzó en noviembre de 2009 con la publicación de un fanzine |
-            y un compilado de bandas locales en CD-R.  En el presente consiste, además, de proyectos |
-            como sello, distribuidora de discos y editorial de libros. |
+
     %script{:type => "text/javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.js"}
     %script{:type => "text/javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.3/jquery.backstretch.min.js"}
     %script{:type => "text/javascript", :src => "http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
